platform/policies/kyverno/enforce/bigbang/disallow-auto-mount-service-account-token.yaml
---
# Source: kyverno-policies/templates/disallow-auto-mount-service-account-token.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-auto-mount-service-account-token
  annotations:
    policies.kyverno.io/title: Disallow AutoMount Service Account Tokens
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod, ServiceAccount
    policies.kyverno.io/description: >-
      Automouting of Kubernetes API credentials is not ideal in all circumstances. This policy finds Pods and Service Accounts
      that automount kubernetes api credentials.
  labels:
    app.kubernetes.io/name: kyverno-policies
    helm.sh/chart: kyverno-policies-3.3.4-bb.24
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kyverno-policies
    app.kubernetes.io/version: "3.3.4-bb.24"
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: kyverno
    app: kyverno
spec:  
  webhookTimeoutSeconds: 30
  validationFailureAction: Audit
  failurePolicy: Ignore
  rules:
  - name: automount-pods    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
          - StatefulSet
          - Deployment
    validate:
      message: >-
        Automount Kubernetes API Credentials is explicitly turned on. The field spec.automountServiceAccountToken 
        must be undefined or set to false.
      pattern:
        spec:
          =(automountServiceAccountToken): false
          =(template):
            =(spec):
              =(automountServiceAccountToken): false
  - name: automount-service-accounts    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - ServiceAccount
    validate:
      message: >-
        Automount Kubernetes API Credentials isn't turned off. The field automountServiceAccountToken 
        must be set to false.
      pattern:
        automountServiceAccountToken: false
