platform/policies/kyverno/enforce/bigbang/disallow-host-namespaces.yaml
---
# Source: kyverno-policies/templates/disallow-host-namespaces.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-namespaces
  annotations:
    pod-policies.kyverno.io/autogen-controllers: Deployment,ReplicaSet,DaemonSet,StatefulSet
    policies.kyverno.io/title: Disallow Host Namespaces
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Host namespaces (Process ID namespace, Inter-Process Communication namespace, and
      network namespace) allow access to shared information and can be used to elevate
      privileges. Pods should not be allowed access to host namespaces. This policy ensures
      fields which make use of these host namespaces are set to `false`.
  labels:
    app.kubernetes.io/name: kyverno-policies
    helm.sh/chart: kyverno-policies-3.3.4-bb.24
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kyverno-policies
    app.kubernetes.io/version: "3.3.4-bb.24"
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: kyverno
    app: kyverno
spec:  
  webhookTimeoutSeconds: 30
  validationFailureAction: Enforce
  background: true
  failurePolicy: Fail
  rules:
  - name: host-namespaces    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        Sharing the host namespaces is disallowed. The fields spec.hostNetwork,
        spec.hostIPC, and spec.hostPID must not be set to true.
      pattern:
        spec:
          =(hostPID): "false"
          =(hostIPC): "false"
          =(hostNetwork): "false"
