platform/policies/kyverno/enforce/bigbang/disallow-privilege-escalation.yaml
---
# Source: kyverno-policies/templates/disallow-privilege-escalation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privilege-escalation
  annotations:
    pod-policies.kyverno.io/autogen-controllers: Deployment,ReplicaSet,DaemonSet,StatefulSet
    policies.kyverno.io/title: Disallow Privilege Escalation
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Privilege escalation, such as via set-user-ID or set-group-ID file mode, should not be allowed.
      This policy ensures the `allowPrivilegeEscalation` fields are either undefined
      or set to `false`.
  labels:
    app.kubernetes.io/name: kyverno-policies
    helm.sh/chart: kyverno-policies-3.3.4-bb.24
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kyverno-policies
    app.kubernetes.io/version: "3.3.4-bb.24"
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: kyverno
    app: kyverno
spec:  
  webhookTimeoutSeconds: 30
  validationFailureAction: Enforce
  background: true
  failurePolicy: Fail
  rules:
  - name: disallow-privilege-escalation    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        Privilege escalation is disallowed. The fields spec.containers[*].securityContext.allowPrivilegeEscalation,
        spec.initContainers[*].securityContext.allowPrivilegeEscalation, and
        spec.ephemeralContainers[*].securityContext.allowPrivilegeEscalation must be undefined or set to `false`.
      foreach:
          - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
            pattern:
              =(securityContext):
                  =(allowPrivilegeEscalation): "false"
