platform/policies/kyverno/enforce/bigbang/disallow-privileged-containers.yaml
---
# Source: kyverno-policies/templates/disallow-privileged-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    pod-policies.kyverno.io/autogen-controllers: Deployment,ReplicaSet,DaemonSet,StatefulSet
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Privileged mode disables most security mechanisms and must not be allowed. This policy
      ensures Pods do not call for privileged mode.
  labels:
    app.kubernetes.io/name: kyverno-policies
    helm.sh/chart: kyverno-policies-3.3.4-bb.24
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kyverno-policies
    app.kubernetes.io/version: "3.3.4-bb.24"
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: kyverno
    app: kyverno
spec:  
  webhookTimeoutSeconds: 30
  validationFailureAction: Enforce
  background: true
  failurePolicy: Fail
  rules:
  - name: priviledged-containers    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        Privileged mode is not allowed. The fields spec.containers[*].securityContext.privileged,
        spec.initContainers[*].securityContext.privileged, and
        spec.ephemeralContainers[*].securityContext.privileged must be undefined or set to false.
      foreach:
          - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
            pattern:
                =(securityContext):
                  =(privileged): "false"
