platform/policies/kyverno/enforce/bigbang/disallow-selinux-options.yaml
---
# Source: kyverno-policies/templates/disallow-selinux-options.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-selinux-options
  annotations:
    pod-policies.kyverno.io/autogen-controllers: Deployment,ReplicaSet,DaemonSet,StatefulSet
    policies.kyverno.io/title: Disallow SELinux Options
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      SELinux options can be used to escalate privileges. This policy ensures that the `seLinuxOptions`
      specified are not used.
  labels:
    app.kubernetes.io/name: kyverno-policies
    helm.sh/chart: kyverno-policies-3.3.4-bb.24
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kyverno-policies
    app.kubernetes.io/version: "3.3.4-bb.24"
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: kyverno
    app: kyverno
spec:  
  webhookTimeoutSeconds: 30
  validationFailureAction: Enforce
  background: true
  failurePolicy: Fail
  rules:
  - name: pod-disallow-selinux-user    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        Setting SELinux user is not allowed.  The fields spec.securityContext.seLinuxOptions.user,
        spec.containers[*].securityContext.seLinuxOptions.user, spec.initContainers[*].securityContext.seLinuxOptions.user,
        and spec.ephemeralContainers[*].securityContext.seLinuxOptions.user must be undefined.
      pattern:
        spec:
          =(securityContext):
            =(seLinuxOptions):
              X(user): "null"
  - name: container-disallow-selinux-user    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        Setting SELinux user is not allowed.  The fields spec.securityContext.seLinuxOptions.user,
        spec.containers[*].securityContext.seLinuxOptions.user, spec.initContainers[*].securityContext.seLinuxOptions.user,
        and spec.ephemeralContainers[*].securityContext.seLinuxOptions.user must be undefined.
      foreach:
          - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
            pattern:
              =(securityContext):
                =(seLinuxOptions):
                  X(user): "null"
  - name: pod-disallow-selinux-role    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        Setting SELinux role is not allowed.  The fields spec.securityContext.seLinuxOptions.role,
        spec.containers[*].securityContext.seLinuxOptions.role, spec.initContainers[*].securityContext.seLinuxOptions.role,
        and spec.ephemeralContainers[*].securityContext.seLinuxOptions.role must be undefined.
      pattern:
        spec:
          =(securityContext):
            =(seLinuxOptions):
              X(role): "null"
  - name: container-disallow-selinux-role    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        Setting SELinux role is not allowed.  The fields spec.securityContext.seLinuxOptions.role,
        spec.containers[*].securityContext.seLinuxOptions.role, spec.initContainers[*].securityContext.seLinuxOptions.role,
        and spec.ephemeralContainers[*].securityContext.seLinuxOptions.role must be undefined.
      foreach:
          - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
            pattern:
              =(securityContext):
                =(seLinuxOptions):
                  X(role): "null"
