platform/policies/kyverno/enforce/bigbang/require-labels.yaml
---
# Source: kyverno-policies/templates/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
  annotations:
    pod-policies.kyverno.io/autogen-controllers: Deployment,ReplicaSet,DaemonSet,StatefulSet
    policies.kyverno.io/title: Require Labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: low
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      A common set of labels on resources allows tools to work interoperably, describing objects
      in a common manner that all tools can understand and query.  This policy validates that
      the labels and values specified in the required list are present on pods.
  labels:
    app.kubernetes.io/name: kyverno-policies
    helm.sh/chart: kyverno-policies-3.3.4-bb.24
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kyverno-policies
    app.kubernetes.io/version: "3.3.4-bb.24"
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: kyverno
    app: kyverno
spec:  
  webhookTimeoutSeconds: 30
  validationFailureAction: Audit
  background: true
  failurePolicy: Ignore
  rules:
  - name: check-for-labels    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        The pod is missing a required label.
      pattern:
        metadata:
          labels:
            app.kubernetes.io/name: "?*"
            app.kubernetes.io/instance: "?*"
            app.kubernetes.io/version: "?*"
