platform/policies/kyverno/enforce/bigbang/restrict-apparmor.yaml
---
# Source: kyverno-policies/templates/restrict-apparmor.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-apparmor
  annotations:
    pod-policies.kyverno.io/autogen-controllers: Deployment,ReplicaSet,DaemonSet,StatefulSet
    policies.kyverno.io/title: Restrict AppArmor Profile
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.3.0
    policies.kyverno.io/description: >-
      On hosts using Debian Linux distros, AppArmor is used as an access control framework.  AppArmor uses
      the 'runtime/default' profile by default.  This policy ensures Pods do not override the AppArmor
      profile with values outside of the allowed list.
  labels:
    app.kubernetes.io/name: kyverno-policies
    helm.sh/chart: kyverno-policies-3.3.4-bb.24
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kyverno-policies
    app.kubernetes.io/version: "3.3.4-bb.24"
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: kyverno
    app: kyverno
spec:  
  webhookTimeoutSeconds: 30
  validationFailureAction: Enforce 
  background: true
  failurePolicy: Fail
  rules:
  - name: app-armor    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        The AppArmor profile used is not in the approved list. The annotation
        container.apparmor.security.beta.kubernetes.io must not be defined,
        or must be set to a profile on the approved list.
      pattern:
        metadata:
          =(annotations):
            =(container.apparmor.security.beta.kubernetes.io/*): "runtime/default | localhost/*"
