platform/policies/kyverno/enforce/bigbang/restrict-host-path-mount.yaml
---
# Source: kyverno-policies/templates/restrict-host-path-mount.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-host-path-mount
  annotations:
    pod-policies.kyverno.io/autogen-controllers: Deployment,ReplicaSet,DaemonSet,StatefulSet
    policies.kyverno.io/title: Restrict hostPath Volume Mountable Paths
    policies.kyverno.io/category: Best Practices (Security)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.5.0
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      hostPath volumes consume the underlying node's file system. If hostPath volumes
      are not universally disabled, they should be restricted to specific
      host paths to prevent access to sensitive information. This policy ensures
      that hostPath volume paths are in the allowed list. It is strongly
      recommended to pair this policy with another to require readOnly on hostPath volumes.
  labels:
    app.kubernetes.io/name: kyverno-policies
    helm.sh/chart: kyverno-policies-3.3.4-bb.24
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kyverno-policies
    app.kubernetes.io/version: "3.3.4-bb.24"
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: kyverno
    app: kyverno
spec:  
  webhookTimeoutSeconds: 30
  validationFailureAction: Enforce 
  background: true
  failurePolicy: Fail
  rules:
  - name: restrict-hostpath-dirs    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: hostPath volume paths are restricted to the allowed list.
      pattern:
        spec:
          =(volumes):
          - =(hostPath):
              path: ""
