platform/policies/kyverno/enforce/bigbang/restrict-image-registries.yaml
---
# Source: kyverno-policies/templates/restrict-image-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
  annotations:
    pod-policies.kyverno.io/autogen-controllers: Deployment,ReplicaSet,DaemonSet,StatefulSet
    policies.kyverno.io/title: Restrict Image Registries
    policies.kyverno.io/category: Best Practices (Security)
    policies.kyverno.io/severity: high
    policies.kyverno.io/minversion: 1.3.0
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Images from unknown, public registries can be of dubious quality and may not be
      scanned and secured, representing a high degree of risk. Requiring use of known, approved
      registries helps reduce threat exposure by ensuring image pulls only come from them. This
      policy validates that all images originate from a registry in the approved list.
  labels:
    app.kubernetes.io/name: kyverno-policies
    helm.sh/chart: kyverno-policies-3.3.4-bb.24
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kyverno-policies
    app.kubernetes.io/version: "3.3.4-bb.24"
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: kyverno
    app: kyverno
spec:  
  webhookTimeoutSeconds: 30
  validationFailureAction: Enforce 
  background: true
  failurePolicy: Fail
  rules:
  - name: validate-registries    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
      - resources:
          namespaces:
          - alloy
          names:
          - alloy-upstream-add-finalizer*
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Image registry is not in the approved list"
      foreach:
          - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
            pattern:
              image: "registry1.dso.mil/* | ghcr.io/* | quay.io/* | docker.io/* | index.docker.io/* | registry.k8s.io/* | public.ecr.aws/*"
