platform/policies/kyverno/enforce/bigbang/restrict-seccomp.yaml
---
# Source: kyverno-policies/templates/restrict-seccomp.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-seccomp
  annotations:
    pod-policies.kyverno.io/autogen-controllers: Deployment,ReplicaSet,DaemonSet,StatefulSet
    policies.kyverno.io/title: Restrict Seccomp
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The SecComp profile should not be explicitly set to Unconfined. This policy,
      requiring Kubernetes v1.19 or later, ensures that the `seccompProfile.Type` is undefined
      or restricted to the values in the allowed list.  By default, this is `RuntimeDefault` or
      `Localhost`.
  labels:
    app.kubernetes.io/name: kyverno-policies
    helm.sh/chart: kyverno-policies-3.3.4-bb.24
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kyverno-policies
    app.kubernetes.io/version: "3.3.4-bb.24"
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: kyverno
    app: kyverno
spec:  
  webhookTimeoutSeconds: 30
  validationFailureAction: Enforce 
  background: true
  failurePolicy: Fail
  rules:
  - name: pod-restrict-seccomp    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        The seccomp profile used is not in the allowed list.  The fields
        spec.securityContext.seccompProfile.type,
        spec.containers[*].securityContext.seccompProfile.type,
        spec.initContainers[*].securityContext.seccompProfile.type, and
        spec.ephemeralContainers[*].securityContext.seccompProfile.type
        must not be set to a value outside of the approved list.
      pattern:
       spec:
        =(securityContext):
          =(seccompProfile):
            type: "RuntimeDefault | Localhost"
  - name: container-restrict-seccomp    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        The seccomp profile used is not in the allowed list.  The fields
        spec.securityContext.seccompProfile.type,
        spec.containers[*].securityContext.seccompProfile.type,
        spec.initContainers[*].securityContext.seccompProfile.type, and
        spec.ephemeralContainers[*].securityContext.seccompProfile.type
        must not be set to a value outside of the approved list.
      foreach:
          - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
            pattern:
              =(securityContext):
                =(seccompProfile):
                  type: "RuntimeDefault | Localhost"
