platform/policies/kyverno/enforce/bigbang/restrict-selinux-type.yaml
---
# Source: kyverno-policies/templates/restrict-selinux-type.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-selinux-type
  annotations:
    pod-policies.kyverno.io/autogen-controllers: Deployment,ReplicaSet,DaemonSet,StatefulSet
    policies.kyverno.io/title: Restrict SELinux Type
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      SELinux options can be used to escalate privileges. This policy ensures that the `seLinuxOptions`
      type field is undefined or restricted to the allowed list.
  labels:
    app.kubernetes.io/name: kyverno-policies
    helm.sh/chart: kyverno-policies-3.3.4-bb.24
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: kyverno-policies
    app.kubernetes.io/version: "3.3.4-bb.24"
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: kyverno
    app: kyverno
spec:  
  webhookTimeoutSeconds: 30
  validationFailureAction: Enforce 
  background: true
  failurePolicy: Fail
  rules:
  - name: pod-selinux-options-type    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        Setting SELinux type is restricted.  The values from spec.securityContext.seLinuxOptions.type,
        spec.containers[*].securityContext.seLinuxOptions.type, spec.initContainers[*].securityContext.seLinuxOptions.type,
        and spec.ephemeralContainers[*].securityContext.seLinuxOptions.type must be in the allowed list.
      pattern:
        spec:
          =(securityContext):
            =(seLinuxOptions):
              =(type): "container_t | container_init_t | container_kvm_t"
  - name: container-selinux-options-type    
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
    match:
      all:
      - resources:
          kinds:
          - Pod
    validate:
      message: >-
        Setting SELinux type is restricted.  The values from spec.securityContext.seLinuxOptions.type,
        spec.containers[*].securityContext.seLinuxOptions.type, spec.initContainers[*].securityContext.seLinuxOptions.type,
        and spec.ephemeralContainers[*].securityContext.seLinuxOptions.type must be in the allowed list.
      foreach:
          - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
            pattern:
              =(securityContext):
                =(seLinuxOptions):
                  =(type): "container_t | container_init_t | container_kvm_t"
